JumpScript/tests/baselines/reference/asyncFunctionDeclaration13_es6.errors.txt
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration13_es6.jump(3,11): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration13_es6.jump (1 errors) ====
    async function foo(): Promise<void> {
       // Legal to use 'await' in a type context.
       var v: await;
              ~~~~~
!!! error TS2304: Cannot find name 'await'.
    }
    